# Pop

./: .clang-format  .gitignore  LICENSE  LICENSE.md  Makefile  Makefile.am  Pop.pro  autogen.sh  configure.ac  data.xml
Compiler/: Makefile.am
Disassembler/: Main.cpp  Makefile.am
Pop/: AST.cpp.in  AST.hpp.in  ByteCodeCompiler.cpp  ByteCodeCompiler.hpp  ByteCodeFile.hpp  CRC32.cpp  CRC32.hpp  Compiler.cpp  Compiler.hpp  Constant.cpp  Constant.hpp  ConstantsTable.cpp  ConstantsTable.hpp  DOT.cpp.in  DOT.hpp  DefineSymbols.cpp.in  DefineSymbols.hpp  DisMain.cpp  Disassembler.cpp  Disassembler.hpp  Formatter.hpp  Grammar.cpp  Grammar.hpp  Grammar.output  Grammar.y  InstructionCompiler.cpp  InstructionCompiler.hpp  InstructionDumper.cpp  InstructionDumper.hpp  InstructionList.hpp  InstructionOptimizer.cpp  InstructionOptimizer.hpp  InstructionResolver.cpp  InstructionResolver.hpp  InstructionVisitor.cpp.in  InstructionVisitor.hpp.in  Instructions.cpp  Instructions.cpp.in  Instructions.hpp.in  Lexer.cpp  (+32 more)
docs/: BytecodeFormat.txt  Makefile.am
m4/: ax_python_module.m4
pop/: Makefile.am  ast.hpp.in  backend.hpp  bytecode-compiler.cpp  bytecode-compiler.hpp  bytecode-file.hpp  common.hpp  compiler.cpp  compiler.hpp  config.h.in  config.h.in~  constant.cpp  constant.hpp  constants-table.cpp  constants-table.hpp  crc32.cpp  data.xml  define-symbols.cpp.in  define-symbols.hpp  disassembler.cpp  disassembler.hpp  dot.cpp.in  dot.hpp  formatter.hpp  frontend.hpp  grammar.y  instruction-compiler.cpp  instruction-compiler.hpp  instruction-dumper.cpp  instruction-dumper.hpp  instruction-list.hpp  instruction-optimizer.cpp  instruction-optimizer.hpp  instruction-resolver.cpp  instruction-resolver.hpp  instruction-visitor.cpp.in  instructions.cpp.in  instructions.hpp.in  ir.hpp  lexer.l  (+23 more)
pop/backend/: Makefile.am  bytecode-disassembler.cpp  bytecode-disassembler.cpp.in  bytecode-disassembler.hpp  bytecode-generator.cpp  bytecode-generator.hpp
pop/common/: Makefile.am  crc32.cpp  crc32.hpp  formatter.hpp  logger.cpp  logger.hpp  utils.cpp  utils.hpp
pop/frontend/: Makefile.am  ast.hpp.in  compiler.cpp  compiler.hpp  constant.cpp  constant.hpp  constants-table.cpp  constants-table.hpp  define-symbols.cpp.in  dot.cpp.in  grammar.y  instruction-compiler.cpp  instruction-compiler.hpp  instruction-dumper.cpp  instruction-dumper.hpp  instruction-optimizer.cpp  instruction-optimizer.hpp  instruction-resolver.cpp  instruction-resolver.hpp  instruction-visitor.cpp.in  instructions.hpp.in  lexer.l  link-parents.cpp.in  link-parents.hpp  location-patcher.cpp.in  operators.cpp.in  parse-state.cpp  parse-state.hpp  parser.cpp  parser.hpp  resolve-symbols.cpp.in  resolve-symbols.hpp  symbol-table.cpp  symbol-table.hpp  type-code.hpp  validate.cpp.in  validate.hpp  visitor.cpp.in
pop/ir/: Makefile.am  ast-visitor.cpp.in  ast.hpp.in  constant.cpp  constant.hpp  constants-table.cpp  constants-table.hpp  instruction-dumper.cpp  instruction-dumper.hpp  instruction-optimizer.cpp  instruction-optimizer.hpp  instruction-resolver.cpp  instruction-resolver.hpp  instruction-visitor.cpp.in  instruction-visitor.hpp.in  instructions.hpp.in  operators.cpp.in  operators.hpp.in
popc/: Makefile.am  compiler.cpp  compiler.hpp  main.cpp  options.cpp  options.hpp
popdis/: Makefile.am  main.cpp  options.cpp  options.hpp
popvm/: Makefile.am  decode.c.in  main.c  ops.h.in  utils.c  utils.h
popvm/ops/: op_add.c  op_and.c  op_bind.c  op_call.c  op_cenv.c  op_clsr.c  op_cmpl.c  op_com.c  op_dec.c  op_div.c  op_dup.c  op_dup2.c  op_eq.c  op_ge.c  op_gt.c  op_hlt.c  op_idx.c  op_inc.c  op_jf.c  op_jmp.c  op_jt.c  op_land.c  op_lbl.c  op_le.c  op_line.c  op_lkup.c  op_lor.c  op_lsh.c  op_lt.c  op_mem.c  op_mod.c  op_mul.c  op_ne.c  op_neg.c  op_nop.c  op_not.c  op_oenv.c  op_or.c  op_pop.c  op_pos.c  (+8 more)
scripts/: Makefile.am  codegen.py  nodegen.py  opgen.py
tests/: Makefile.am  test.pop
